styles.css
body {
    margin: 0;
    background: linear-gradient(135deg, #0f0f1a, #1a0033);
    font-family: Consolas, monospace;
    color: #EFD6FF;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    text-align: center;
    overflow: hidden;
}

.container {
    max-width: 650px;
}

button {
    margin-top: 20px;
    padding: 12px 24px;
    background: #EFD6FF;
    border: none;
    font-family: monospace;
    cursor: pointer;
    font-size: 14px;
}

button:hover {
    opacity: 0.9;
}

.terminal {
    margin-top: 20px;
    background: #000;
    padding: 20px;
    border-radius: 8px;
    color: #00ff88;
    display: none;
    text-align: left;
    min-height: 180px;
}

.hiddenLetter {
    display: none;
    margin-top: 20px;
    color: #fff;
    line-height: 1.6;
}

.commitSection {
    display: none;
    margin-top: 20px;
}

.commitResult {
    margin-top: 10px;
    color: #00ff88;
}
.floating-heart {
    position: fixed;
    bottom: -20px;
    font-size: 18px;
    animation: floatUp 6s linear forwards;
    pointer-events: none;
    opacity: 0.8;
}
.pipeline {
    margin-top: 20px;
    display: none;
    width: 100%;
    max-width: 500px;
}

.progressBar {
    width: 100%;
    height: 10px;
    background: #1f2937;
    border-radius: 5px;
    overflow: hidden;
    margin-bottom: 10px;
}

.progressFill {
    width: 0%;
    height: 100%;
    background: #3fb950;
    transition: width 0.3s ease;
}
.polaroid {
    position: fixed;
    width: 180px;
    background: white;
    padding: 10px 10px 25px 10px;
    border-radius: 8px;
    box-shadow: 0 15px 40px rgba(0,0,0,0.4);
    transition: all 1s ease;
    z-index: 10;
}

.polaroid img {
    width: 100%;
    border-radius: 4px;
}

/* Posiciones */
.left {
    left: -250px;
}

.right {
    right: -250px;
}

/* Cuando aparecen */
.show.left {
    left: 30px;
}

.show.right {
    right: 30px;
}

/* Rotaciones cute */
#photo1 { top: 20%; transform: rotate(-8deg); }
#photo2 { top: 45%; transform: rotate(6deg); }
#photo3 { top: 70%; transform: rotate(-4deg); }

.hidden {
    opacity: 0;
}

.show {
    opacity: 1;
}

@keyframes floatUp {
    from {
        transform: translateY(0);
        opacity: 0.8;
    }
    to {
        transform: translateY(-110vh);
        opacity: 0;
    }
}

